# oneshot

./: .gitignore  AGENTS.md  DEPLOYMENT.md  render.yaml
.claude/: settings.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py
backend/app/routes/: admin.py  me.py
backend/app/services/: domains.py  profiles.py
backend/supabase/: migration.sql
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_health.py  test_me.py
docs/superpowers/plans/: 2026-03-26-clay-talent-portal.md
docs/superpowers/specs/: 2026-03-26-clay-talent-portal-design.md
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/auth/callback/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: AdminPageClient.tsx  AdminUserTable.tsx  DashboardPageClient.tsx  GoogleOneTap.tsx  LoginPageClient.tsx  Nav.tsx
frontend/src/lib/: api.ts  config.ts
frontend/src/lib/supabase/: server.ts
frontend/src/types/: google.d.ts
supabase/migrations/: 001_schema.sql
